--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.accounts_table {
+    width: 400px;
+}
 .rows {
     height: 20px;
     border-bottom: solid black 2px;
@@ -11,4 +14,8 @@
     display: inline-block;
     width: 30px;
     color: #ff0000;
+}
+.rows_buttons {
+    display: inline-block;
+    float: right;
 }
